# neovim-ide-mvp

./: README.md  setup.sh  vimrc
example/: CMakeLists.txt
example-buildroot/: .ccls  .ycm_extra_conf.py  do_build.sh
stow/neovim/.config/nvim/: init.vim
